assets/css/style.css
/* ... */
.chalkboard i {
  color: white;
}

.chalkboard #sound-toggle>i {
  color: white;
}

.chalkboard .navbar {
  border: 1px white;
}

.chalkboard .timer {
  box-shadow: 0px 0px 20px 5px rgba(255, 255, 255, 0.2);
}

.chalkboard .fa-brands:hover {
  color: var(--red-orange);
}

.plaid {
  background-image: url('../images/plaid.webp');
}

#sound-toggle {
  font-size: 1.5rem;
}

#sound-div, #sound-div i {
  margin: 0px;
}

#game-over {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  z-index: 1;
  width: 50%;
  padding: 20px;
}

#game-over p {
  text-align: center;
}

footer {
  bottom: 0;
  right: 0;
  position: absolute;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  font-size: 1rem;
  width: 100%;
}

footer .social-links i {
  font-size: 1.5rem;
}

footer .social-links a {
  text-decoration: none;
  color: var(--purple-blue);
}

footer .social-links a:hover {
  color: var(--red-orange);
}

footer p {
  display: flex;
  justify-content: center;
}

footer > * {
  flex: 1;
}

.social-links {
  width: 10%;
  display: flex;
  justify-content: center;
}

.social-links > * {
  margin: 0 10px;
}
.copyright > * {
  align-items: baseline;
}

/* 404 page */
.warning {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.warning img {
  padding: 20px;
  width: 50%;;
}

.warning a, .warning i {
  text-decoration: none;
  color: var(--red-orange);
}

.warning a:hover, .warning i:hover {
  color: var(--yellow-orange);
}

.warning span {
  color: var(--yellow-orange);
}
@media (max-width: 900px) {
  .logo {
    font-size: 1.2rem;
  }

  :root {
    --card-size: 90px;
  }

  .memory-field, .memory-field .row {
    gap: 20px;
  }

  #small {
    --card-size: 120px;
  }

  #medium {
    --card-size: 100px;
  }

  .modal {
    width: 60%;
    font-size: 1rem;
  }

  article {
    padding: 0 15%;
    font-size: 1.2rem;
  }


  footer .social-links i {
    font-size: 1.2rem;
  }
}
@media (max-height: 800px) {

  .game-details, .choice {
    padding: 10px 0;
  }

  #small, #medium, #big {
    --card-size: 55px;
  }

  section h1 {
    padding: 10px 0;
  }

  article h2 {
    margin: 5px 0;
  }

  article {
    padding: 0 15%;
    font-size: .9rem;
  }

  #memory-img {
    width: 200px;
  }


}
@media (max-width: 600px){
  body {
    margin: 5px;
  }

  #small {
    --card-size: 80px;
  }

  #medium {
    --card-size: 65px;
  }

  #big {
    --card-size: 55px;
  }

  .navbar .logo {
    font-size: 1rem;
  }

  .navbar a {
    font-size: .8rem;
  }

  .game-details {
    padding-top: 30px 0;
  }

  .timer {
    font-size: 0.8rem;
  }
  .level {
    font-size: .6rem;
  }

  .level i {
    font-size: .8rem;
  }

  .memory-field > div {
    padding: 5px 0;
  }

  .memory-field, .memory-field .row {
    gap: 10px;
  }

  .modal {
    width: 50%;
    font-size: 0.8rem;
  }

  .choice {
    font-size: .6rem;
  }

  footer span {
    font-size: .8rem;
  }

  button {
    font-size: .8rem;
    height: 3rem;
    margin: auto 0;
    padding: 0 10px;
  }

  #sound-div {
    margin: auto 0px;
  }

  legend {
    font-size: .8rem;
  }

  fieldset {
    padding: 0 5px 5px 5px;
  }
  
  fieldset label {
    font-size: .8rem;
    padding-right: 2px;
  }

  section {
    padding: 0 10px;
  }
  
  section h1 {
    padding: 10px 0;
    font-size: 1.5rem;
  }
  
  article {
    font-size: .8rem;
    padding: 0 5%;
  }
  
  .image {
    text-align: center;
  }
  
  #memory-img {
    width: 200px;
  }

}

